--- a/350Game/Packages/manifest.json
+++ b/350Game/Packages/manifest.json
@@ -1,5 +1,17 @@
 {
+  "scopedRegistries": [
+    {
+      "name": "npmjs",
+      "url": "https://registry.npmjs.org/",
+      "scopes": [
+        "io.extendreality"
+      ]
+    }
+  ],
   "dependencies": {
+    "io.extendreality.tilia.camerarigs.trackedalias.unity": "1.5.9",
+    "io.extendreality.tilia.sdk.oculusintegration.unity": "1.3.8",
+    "io.extendreality.tilia.interactions.controllables.unity": "1.11.17",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.4",
@@ -8,6 +20,7 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.6",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "1.3.11",
     "com.unity.xr.oculus.standalone": "2.38.4",
     "com.unity.xr.openvr.standalone": "2.0.5",
     "com.unity.modules.ai": "1.0.0",
